--- a/index.css
+++ b/index.css
@@ -1,208 +1,154 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-del,
-dfn,
-em,
-font,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend {
-  vertical-align: baseline;
-  font-family: inherit;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-}
+html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
+del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
+	vertical-align: baseline;
+	font-family: inherit;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	outline: 0;
+	padding: 0;
+	margin: 0;
+	}
 /* remember to define focus styles! */
 :focus {
-  outline: 0;
-}
-ol,
-ul {
-  list-style: none;
-}
+	outline: 0;
+	}
+ol, ul {
+	list-style: none;
+	}
 /* tables still need cellspacing="0" in the markup */
 table {
-  border-collapse: separate;
-  border-spacing: 0;
-}
-caption,
-th,
-td {
-  font-weight: normal;
-  text-align: left;
-}
+	border-collapse: separate;
+	border-spacing: 0;
+	}
+caption, th, td {
+	font-weight: normal;
+	text-align: left;
+	}
 /* remove possible quote marks (") from <q> & <blockquote> */
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
+blockquote:before, blockquote:after, q:before, q:after {
+	content: "";
+	}
+blockquote, q {
+	quotes: "" "";
+	}
+*{
+    box-sizing:border-box;
+    max-width:100%;
+    /* border:1px solid grey; */
+}    
+
+/*General Styles*/
+html{
+    font-size:62.5%;
 }
-blockquote,
-q {
-  quotes: "" "";
+body{
+    font-size:1.6rem;
+    line-height:1.5;
+    font-family: 'Roboto Mono', monospace;
+}
+h1{
+    font-family: 'Chelsea Market', cursive;
+    font-size:5.5rem;
+}
+section{
+    padding:4% 0;
 }
 
-* {
-  box-sizing: border-box;
-  max-width: 100%;
-  /* border: 1px solid grey; */
-  color: #333333;
+/*header section styles*/
+nav{
+    padding:2% 0;
+    display:flex;
+    justify-content:space-evenly;
+}
+nav a{
+    display:inline-block;
+    padding:1% 0;
+    border-radius:10px;
+    width:10%;
+    text-align:center;
+    color:#fff;
+    text-decoration:none;
+}
+.orange{
+    background-color:#FF764E;
+}
+.blue{
+    background-color:#5ED3EB;
+}
+.yellow{
+    background-color:#FFCD69;
 }
 
-/* General Styles */
-html {
-  font-size: 62.5%;
-}
-body {
-  font-size: 1.6rem;
-  line-height: 1.5;
-  font-family: "Roboto Mono", monospace;
-}
-h1 {
-  font-family: "Chelsea Market", cursive;
-  font-size: 5.5rem;
-}
-.top {
-  padding: 4% 0;
-}
-
-/* header section styles */
-nav {
-  padding: 2% 0;
-}
-nav a {
-  display: inline-block;
-  padding: 1% 0;
-  border-radius: 10px;
-  width: 10%;
-  text-align: center;
-  color: #fff;
-  text-decoration: none;
-}
-.orange {
-  background-color: #ff764e;
-  margin-left: 10%;
-}
-.blue {
-  background-color: #5ed3eb;
-  margin: 0 24%;
-}
-.yellow {
-  background-color: #ffcd69;
-  margin-right: 10%;
-}
-
-/* Top Section Styles */
+/*Top Section styles*/
 .top{
-    position:relative;
+display:flex;
 }
-.top div {
-  display: inline-block;
-  width: 45%;
-  margin: 0 2%;
-  text-align: center;
+.top div{
+    width:45%;
+    text-align:center;
 }
-.left img {
-  border-radius: 50%;
-  width: 60%;
-  margin: 0 auto;
+.left img{
+    border-radius:50%;
+    width:60%;
 }
 .right{
-    padding: 5%;
-    line-height: 2;
-    position:absolute;
-    bottom: 25%;
-}
-.sub{
-    width: 100%;
+    padding:4%;
+    line-height:2;
+    bottom:20%;
 }
 
-.middle p{
-    background-color: #DDB9A3;
-    width: auto;
-    padding: 8px 13px;
-    margin: 1% 2%;
-    color: #fff;
+/* General Info Section */
+.generalInfo{
+  display:flex;
+  justify-content:center;
 }
-.bold{
-    font-weight: bold;
+.generalInfo div{
+  width:90%;
+  background-color:#DDB9A3;
+  color:#fff;
+  padding:2% 2% 1% 2%;
 }
-.middle-two{
-  display:inline-block;
-  margin:0.5% 40% 0.6%;
-  width:30%;
-  text-align: center;
+.generalInfo div p{
+  margin-bottom:2%;
 }
 
-.clipart{
-  display:inline-block;
-  width:20%;
-  margin:2% 40% 0;
+/* Camp Info Section */
+.camp{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
 }
-#camper{
-  width:10%;
-  margin:0 auto;
+.camp div{
+  width:25%;
+  margin:4% 0%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
 }
-.half{
-  width: 100%;
+.camp div img{
+  width:80%;
+}
+span{
+  font-weight: 900;
+}
+
+/* empty section */
+.bg-img{
+  background-image: url('assets/footer_img.jpg');
+  height: 40vh;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 40vh;
+  background-position: top;
 }
-.footer{
-    background-color: #F9E7DC;
+
+/* footer */
+footer{
+  background-color:#F9E7DC;
+}
+footer p{
+  display:flex;
+  justify-content: center;
 }
